# Global-Merit-Chain

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/gmc-core/: Cargo.toml
crates/gmc-core/src/: antifraud.rs  carbon.rs  chain_creation.rs  error.rs  flows.rs  gmc_base.rs  governance.rs  l1_settlement.rs  l2_rollup.rs  lib.rs  mechanism.rs  merit.rs  minting.rs  quota.rs  recording.rs  registration.rs  registry.rs  retroactive.rs  scoring.rs  types.rs
crates/gmc-core/tests/: antifraud_clawback.rs  deliverables_smoke.rs  e2e_flows_integration.rs  gmc_base_monetary_rejection.rs  l1_anchoring_integration.rs  l2_crosslayer_integration.rs  minting_invalid_amount.rs  property_01_derivation_path.rs  property_02_no_cycles.rs  property_03_depth_bound.rs  property_04_domain_unique.rs  property_05_steward_present.rs  property_06_mechanism_inheritance.rs  property_07_mechanism_config.rs  property_08_mechanism_governance.rs  property_09_quota_never_exceeds.rs  property_10_refresh_reset.rs  property_11_quota_isolation.rs  property_12_quota_config_validation.rs  property_13_dimension_weights_sum.rs  property_14_inflation_index_range.rs  property_15_weighted_mint_sum.rs  property_16_min_merit_monotonic.rs  property_17_cur_merit_floor.rs  property_18_registration_validation.rs  property_19_record_needs_registration.rs  property_20_grant_guard.rs  property_21_retro_evidence.rs  property_22_retro_threshold.rs  property_23_retro_rejection.rs  property_24_voter_selection.rs  property_25_anomaly_detection.rs  property_26_vote_weighting.rs  property_27_voucher_single_conversion.rs  (+6 more)
(+135 files in other folders)
